ci: disable wandb in tests; guard wandb init

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,8 @@ jobs:
         run: |
           python -m py_compile $(find src -name "*.py")
       - name: Test
+        env:
+          WANDB_MODE: offline
+          WANDB_DISABLED: "true"
         run: |
           pytest -q
